--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,14 @@
 name: http_modified
 description: A starting point for Dart libraries or applications.
-version: 1.0.0
-# homepage: https://www.example.com
+version: 0.0.1
+homepage: https://soewaiyanmyowin.dev
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
  http: ^0.13.3
+ http_parser: ^4.0.0
 
 dev_dependencies:
  test: ^1.17.12
